<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mystade.inscription"
    android:background="@drawable/bk2">


    <EditText
        android:id="@+id/nomID"
        style="@style/Theme.AppCompat.Dialog"
        android:layout_width="246dp"
        android:layout_height="63dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:theme="@style/MyEditText"
        android:textSize="30px"
        android:textStyle="bold"
        android:textColor="#ffff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/prenomID"
        style="@style/Theme.AppCompat.Dialog"
        android:layout_width="246dp"
        android:layout_height="63dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:textSize="30px"
        android:textStyle="bold"
        android:textColor="#ffff"
        android:hint="@string/hint_prenom"
        android:inputType="textPersonName"
        android:theme="@style/MyEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomID" />

    <EditText
        android:id="@+id/loginID"
        style="@style/Theme.AppCompat.Dialog"
        android:layout_width="246dp"
        android:textSize="30px"
        android:textStyle="bold"
        android:textColor="#ffff"
        android:layout_height="63dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_login"
        android:inputType="textPersonName"
        android:theme="@style/MyEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prenomID" />

    <EditText
        android:id="@+id/passeID"
        style="@style/Theme.AppCompat.Dialog"
        android:layout_width="246dp"
        android:layout_height="63dp"
        android:textSize="30px"
        android:textStyle="bold"
        android:textColor="#ffff"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_mdp"
        android:inputType="textPassword"
        android:theme="@style/MyEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginID"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/passe2ID"
        style="@android:style/Widget.DeviceDefault.AutoCompleteTextView"
        android:layout_width="246dp"
        android:layout_height="63dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:textSize="30px"
        android:textStyle="bold"
        android:textColor="#ffff"
        android:hint="@string/hint_mdp2"
        android:inputType="textPassword"
        android:theme="@style/MyEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passeID" />

    <Button
        android:id="@+id/okID"
        style="@style/Base.Theme.AppCompat"
        android:layout_width="236dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:text="S'inscrire"
        android:background="@drawable/my_button"
        app:layout_constraintTop_toBottomOf="@+id/passe2ID"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cancelID"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        android:textColor="#004d00"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/cancelID"
        style="@style/Base.Theme.AppCompat"
        android:layout_width="236dp"
        android:layout_height="46dp"
        android:background="@drawable/my_button"
        android:text="Annuler"
        android:textColor="#004d00"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>
